add: sample api
