# server/api/controllers/index.js
@@ -1,0 +1,8 @@
+/**
+ * Created by kokikono on 2017/10/24.
+ */
+import sample from './sample';
+
+export default {
+    sample,
+};
